# ICE-CoreOS

./: .containerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md
ci/: artifact-generation.sh  build-image.sh  canonicalize-vmlinuz.sh  stage-artifacts.sh  test-artifact-generation.sh  test-build-image-dispatch-contract.sh  test-kernel-packaging-patch.sh  verify-build-context.sh
docs/: ADR-0001-ota-licence-gate.md  ADR-0002-secure-boot-zero-touch.md  ADR-0003-base-and-update-model.md  ADR-0004-disk-encryption-tpm-luks.md  ADR-0005-release-channels.md  ADR-0006-kernel-4k-page-size.md  ADR-0007-license-fsl.md  ADR-0008-multiarch-os-support.md  ADR-0009-gb10-arm64-shipping-envelope.md  ADR-0010-hardware-targeted-bootc-identity.md  ADR-0011-atomic-ota-state-v1.md  ADR-0011-tpm-unlock-rotation-robustness.md  ADR-0012-atomic-ota-state-v1.md  ADR-0013-device-root-tpm-v1.md  ARTIFACT-STAGING.md  INSTALLER-UX-HARDENING.md  PRELOADED-EDITION.md  SEED-TREE-MANIFEST-V1.md  ai-quickstart.md
ignition/: neural-ice.bu
image/: Containerfile.bootc  Containerfile.installer  build-installer-usb.sh  build-preloaded.sh  config-installer.toml  (+7 more)
tools/ni-ota-verify/: Cargo.toml  README.md
tools/ni-ota-verify/contracts/: licensing-bootstrap-v1.contract.json
tools/ni-ota-verify/src/: atomic_state.rs  bootstrap.rs  commit.rs  config.rs  delegated.rs  licensing_bootstrap.rs  main.rs  record.rs  runner.rs  state.rs  state_v1.rs  time_challenge.rs  trusted_time.rs  verify.rs
tools/ni-ota-verify/src/delegated/: beta.rs  contract.rs
tools/ni-ota-verify/src/delegated/beta/: usb.rs
tools/ni-ota-verify/src/licensing_bootstrap/: tests.rs
tools/ni-ota-verify/tests/: cli.rs
tools/ni-ota-verify/tests/fixtures/delegated-v1/: beta-publication-receipt.json  delegation-snapshot.json  release-authorization.json
tui/: AGENTS.md  Cargo.toml  Makefile  README.md
tui/src/: app.rs  main.rs  paths.rs
tui/src/system/: ai_stack.rs  clock.rs  disk.rs  gpu.rs  identity.rs  license.rs  mod.rs  network.rs  ntp.rs  resources.rs
tui/src/ui/: dashboard.rs  mod.rs  theme.rs
tui/src/ui/dashboard/: cards.rs  panels.rs
(+66 files in other folders)
