[package]
name = "neuralice-tui"
version = "0.44.1"
edition = "2021"
authors = ["Neural-ICE Team"]
description = "Terminal UI dashboard for Neural-ICE AI appliance"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Local wall-clock time for the header clock/date
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Serialization (for parsing nvidia-smi, license cache, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols

# ARM64 cross-compilation
# rustup target add aarch64-unknown-linux-gnu
# cross build --release --target aarch64-unknown-linux-gnu
